fix(ui): text vertical overflow

--- a/src/styles/RecentContent.module.css
+++ b/src/styles/RecentContent.module.css
@@ -21,7 +21,6 @@
 
 .list > li > a {
   font-weight: 600;
-  line-height: 1.2;
 }
 
 .info span {
